dnl Process this file with autoconf to produce a configure script.
AC_INIT(sslcat.c)
AC_CONFIG_HEADER(config.h)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL

dnl Checks for libraries.

dnl Checks for OpenSSL
AC_MSG_CHECKING(for OpenSSL)
AC_ARG_WITH(openssl,
[  --with-openssl=DIR      use OpenSSL in DIR],
[ case "$withval" in
  yes|no)
     AC_MSG_RESULT(no)
     ;;
  *)
     AC_MSG_RESULT($withval)
     if test -f $withval/include/openssl/ssl.h -a -f $withval/libssl.a; then
        owd=`pwd`
        if cd $withval; then withval=`pwd`; cd $owd; fi
	SSLINC="-I$withval/include"
	SSLLIB="-L$withval -lssl -lcrypto"
     elif test -f $withval/include/openssl/ssl.h -a \
	       -f $withval/lib/libssl.a; then
	owd=`pwd`
	if cd $withval; then withval=`pwd`; cd $owd; fi
	SSLINC="-I$withval/include"
	SSLLIB="-L$withval/lib -lssl -lcrypto"
     else
        AC_ERROR(ssl.h or libssl.a not found in $withval)
     fi
     WEBMITM="webmitm"
     ;;
  esac ],
[ if test -f ${prefix}/include/openssl/ssl.h; then
     SSLINC="-I${prefix}/include"
     SSLLIB="-L${prefix}/lib -lssl -lcrypto"
  elif test -f ${prefix}/ssl/include/openssl/ssl.h; then
     SSLINC="-I${prefix}/ssl/include"
     SSLLIB="-L${prefix}/ssl/lib -lssl -lcrypto"
  elif test -f /usr/include/openssl/ssl.h; then
     SSLLIB="-lssl -lcrypto"
  else
     AC_MSG_RESULT(no)
     AC_ERROR(OpenSSL not found)
  fi
  AC_MSG_RESULT(yes)
]
)
AC_SUBST(SSLINC)
AC_SUBST(SSLLIB)

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(fcntl.h unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.
AC_FUNC_VPRINTF
AC_CHECK_FUNCS(select socket)

AC_OUTPUT(Makefile)
